--- a/models/inception_coord.yaml
+++ b/models/inception_coord.yaml
@@ -14,14 +14,19 @@ scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call 
 # YOLOv8.0n backbone
 backbone:
   # [from, repeats, module, args]
-  - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
-  - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
+  - [-1, 1, MetaNeXtStage, [64]]
+  - [-1, 1, MetaNeXtStage, [128]]
+#  - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
+#  - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
   - [-1, 3, C2f, [128, True]]
-  - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
+  - [-1, 1, MetaNeXtStage, [256]]
+#  - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
   - [-1, 6, C2f, [256, True]]
-  - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
+  - [-1, 1, MetaNeXtStage, [512]]
+#  - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
   - [-1, 6, C2f, [512, True]]
-  - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
+  - [-1, 1, MetaNeXtStage, [1024]]
+#  - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
   - [-1, 1, CoordAtt, [1024, 1024]]
   - [-1, 3, C2f, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]]  # 9
