--- a/models/coord.yaml
+++ b/models/coord.yaml
@@ -22,7 +22,6 @@ backbone:
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
   - [-1, 6, C2f, [512, True]]
   - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
-  - [-1, 1, CoordAtt, [1024, 1024]]
   - [-1, 3, C2f, [1024, True]]
   - [-1, 1, SPPF, [1024, 5]]  # 9
 
@@ -35,15 +34,16 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 4], 1, Concat, [1]]  # cat backbone P3
   - [-1, 3, C2f, [256]]  # 15 (P3/8-small)
+  - [-1, 1, CoordAtt, [64, 64]] # 16
 
   - [-1, 1, Conv, [256, 3, 2]]
-  - [-1, 1, CoordAtt, [256, 256]]
   - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 18 (P4/16-medium)
+  - [-1, 3, C2f, [512]]  # 19 (P4/16-medium)
+  - [-1, 1, CoordAtt, [128, 128]] # 20
 
   - [-1, 1, Conv, [512, 3, 2]]
-  - [-1, 1, CoordAtt, [512, 512]]
-  - [[-1, 10], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
+  - [[-1, 9], 1, Concat, [1]]  # cat head P5
+  - [-1, 3, C2f, [1024]]  # 23 (P5/32-large)
+  - [-1, 1, CoordAtt, [256, 256]] # 24
 
-  - [[15, 19, 23], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[16, 20, 24], 1, Detect, [nc]]  # Detect(P3, P4, P5)
