--- a/models/inception_coord.yaml
+++ b/models/inception_coord.yaml
@@ -14,41 +14,40 @@ scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call 
 # YOLOv8.0n backbone
 backbone:
   # [from, repeats, module, args]
-  - [-1, 1, MetaNeXtStage, [64]]
-  - [-1, 1, MetaNeXtStage, [128]]
-#  - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
-#  - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
-  - [-1, 3, C2f, [128, True]]
-  - [-1, 1, MetaNeXtStage, [256]]
-#  - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
-  - [-1, 6, C2f, [256, True]]
-  - [-1, 1, MetaNeXtStage, [512]]
-#  - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
-  - [-1, 6, C2f, [512, True]]
-  - [-1, 1, MetaNeXtStage, [1024]]
-#  - [-1, 1, Conv, [1024, 3, 2]]  # 7-P5/32
-  - [-1, 1, CoordAtt, [1024, 1024]]
-  - [-1, 3, C2f, [1024, True]]
-  - [-1, 1, SPPF, [1024, 5]]  # 9
+  - [ -1, 1, Conv, [ 64, 3, 2 ] ]  # 0-P1/2
+  - [ -1, 1, Conv, [ 128, 3, 2 ] ]  # 1-P2/4
+  - [ -1, 3, InceptionDWConv2d, [ 128 ] ]
+  - [ -1, 3, C2f, [ 128 ] ]
+  - [ -1, 1, Conv, [ 256, 3, 2 ] ]  # 4-P3/8
+  - [ -1, 6, InceptionDWConv2d, [ 256 ] ]
+  - [ -1, 3, C2f, [ 256 ] ]
+  - [ -1, 1, Conv, [ 512, 3, 2 ] ]  # 7-P4/16
+  - [ -1, 6, InceptionDWConv2d, [ 512 ] ]
+  - [ -1, 3, C2f, [ 512 ] ]
+  - [ -1, 1, Conv, [ 1024, 3, 2 ] ]  # 10-P5/32
+  - [ -1, 3, InceptionDWConv2d, [ 1024 ] ]
+  - [ -1, 3, C2f, [ 1024 ] ]
+  - [ -1, 1, SPPF, [ 1024, 5 ] ]  # 13
 
 # YOLOv8.0n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 6], 1, Concat, [1]]  # cat backbone P4
-  - [-1, 3, C2f, [512]]  # 12
+  - [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
+  - [ [ -1, 9 ], 1, Concat, [ 1 ] ]  # cat backbone P4
+  - [ -1, 3, C2f, [ 512 ] ]  # 16
 
-  - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
-  - [[-1, 4], 1, Concat, [1]]  # cat backbone P3
-  - [-1, 3, C2f, [256]]  # 15 (P3/8-small)
+  - [ -1, 1, nn.Upsample, [ None, 2, 'nearest' ] ]
+  - [ [ -1, 6 ], 1, Concat, [ 1 ] ]  # cat backbone P3
+  - [ -1, 3, C2f, [ 256 ] ]  # 19 (P3/8-small)
+  - [ -1, 1, CoordAtt, [ 64, 64 ] ] # 20
 
-  - [-1, 1, Conv, [256, 3, 2]]
-  - [-1, 1, CoordAtt, [256, 256]]
-  - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 18 (P4/16-medium)
+  - [ -1, 1, Conv, [ 256, 3, 2 ] ]
+  - [ [ -1, 16 ], 1, Concat, [ 1 ] ]  # cat head P4
+  - [ -1, 3, C2f, [ 512 ] ]  # 23 (P4/16-medium)
+  - [ -1, 1, CoordAtt, [ 128, 128 ] ] # 24
 
-  - [-1, 1, Conv, [512, 3, 2]]
-  - [-1, 1, CoordAtt, [512, 512]]
-  - [[-1, 10], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
+  - [ -1, 1, Conv, [ 512, 3, 2 ] ]
+  - [ [ -1, 13 ], 1, Concat, [ 1 ] ]  # cat head P5
+  - [ -1, 3, C2f, [ 1024 ] ]  # 27 (P5/32-large)
+  - [ -1, 1, CoordAtt, [ 256, 256 ] ] # 28
 
-  - [[15, 19, 23], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [ [ 20, 24, 28 ], 1, Detect, [ nc ] ]  # Detect(P3, P4, P5)
